tests/rosetta/out/C/abbreviations-simple.error
cc: exit status 1
/tmp/abbreviations-simple.c: In function ‘parseIntStr’:
/tmp/abbreviations-simple.c:217:11: error: request for member ‘len’ in something not a structure or union
  217 |   if ((str.len > 0 && tmp9 == "-")) {
      |           ^
/tmp/abbreviations-simple.c:234:18: error: request for member ‘len’ in something not a structure or union
  234 |   while ((i < str.len)) {
      |                  ^
/tmp/abbreviations-simple.c: In function ‘readTable’:
/tmp/abbreviations-simple.c:286:10: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
  286 |   return (tmp_item_t){.commands = cmds, .mins = mins};
      |          ^
/tmp/abbreviations-simple.c: In function ‘validate’:
/tmp/abbreviations-simple.c:300:19: warning: implicit declaration of function ‘upper’ [-Wimplicit-function-declaration]
  300 |         char *c = upper(cmd);
      |                   ^~~~~
/tmp/abbreviations-simple.c:300:19: warning: initialization of ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
/tmp/abbreviations-simple.c:301:20: warning: initialization of ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  301 |         char *ww = upper(w);
      |                    ^~~~~
/tmp/abbreviations-simple.c: In function ‘mochi_main’:
/tmp/abbreviations-simple.c:352:43: error: request for member ‘data’ in something not a structure or union
  352 |   list_string commands = (list_string)(tbl.data["commands"]);
      |                                           ^
/tmp/abbreviations-simple.c:353:33: error: request for member ‘data’ in something not a structure or union
  353 |   list_int mins = (list_int)(tbl.data["mins"]);
      |                                 ^
/tmp/abbreviations-simple.c:362:19: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  362 |       out1 = out1 + padRight(words.data[k], strlen(results.data[k]));
      |                   ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                     |
      |                     char *
/tmp/abbreviations-simple.c:370:33: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  370 |   printf("%s\n", "full words: " + join(results, " "));
      |                  ~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~
      |                  |                |
      |                  char *           char *
